--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <li class="inline-flex items-center">
                     <a href="#" class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-blue-600">
                         <i class="fas fa-home mr-2"></i>
-                        Beranda
+                        Home
                     </a>
                 </li>
                 <li>
